Grade Statistics UI code.